[package]
name = "crystalorb"
version = "0.1.0"
authors = ["Ernest Wong <sudo@ernestwong.nz>"]
edition = "2018"

[features]
default = [
    "serde/derive"
]

[dependencies]
tracing = "0.1.22"
serde="1.0.118"

[dev-dependencies]
tracing-subscriber = "0.2.17"
pretty_assertions = "0.7.1"
itertools = "0.10.0"
float-cmp = "0.8.0"
test-env-log = {version = "0.2.7", default-features = false, features = ["trace"]}
