[package]
name = "crystalorb"
version = "0.1.0"
authors = ["Ernest Wong <sudo@ernestwong.nz>"]
categories = ["games", "simulation"]
description = "Network-agnostic, high-level game networking library"
edition = "2018"
keywords = ["netcode"]
license = "MIT"
readme = "README.markdown"
repository = "https://github.com/ErnWong/crystalorb"

[features]
default = [
    "serde/derive"
]

[dependencies]
tracing = "0.1.22"
serde="1.0.118"

[dev-dependencies]
tracing-subscriber = "0.2.17"
pretty_assertions = "0.7.1"
itertools = "0.10.0"
float-cmp = "0.8.0"
test-env-log = {version = "0.2.7", default-features = false, features = ["trace"]}
crystalorb-mock-network = {version = "0.1.0", path = "./crates/crystalorb-mock-network"}
crystalorb-demo = {version = "0.1.0", path = "./examples/demo"}

[workspace]
members = [
  "examples/demo",
  "crates/crystalorb-mock-network",
  "crates/crystalorb-bevy-networking-turbulence"
]

[profile.release.package.crystalorb-demo]
debug = true
