[package]
name = "crystalorb-bevy-networking-turbulence"
version = "0.1.0"
authors = ["Ernest Wong <sudo@ernestwong.nz>"]
categories = ["games", "simulation"]
edition = "2018"
keywords = ["netcode"]
license = "MIT"
readme = "README.markdown"
repository = "https://github.com/ErnWong/crystalorb"

[dependencies]
bevy_networking_turbulence = {version = "0.2.0", default-features = false}
crystalorb = {version = "0.1.0", path="../../"}
serde = {version = "1.0.118", features = ["derive"]}
turbulence = "0.3"
