[package]
name = "crystalorb-bevy-networking-turbulence"
version = "0.3.0"
authors = ["Ernest Wong <sudo@ernestwong.nz>"]
categories = ["games", "simulation"]
description = "bevy_networking_turbulence integration for CrystalOrb"
edition = "2021"
keywords = ["netcode"]
license = "Apache-2.0"
readme = "README.markdown"
repository = "https://github.com/ErnWong/crystalorb"

[features]
default = ["use-udp"]
use-udp = ["bevy_networking_turbulence/use-udp"]
use-webrtc = ["bevy_networking_turbulence/use-webrtc"]

[dependencies]
bevy_app = "0.6"
bevy_ecs = "0.6"
bevy_core = "0.6"
bevy_networking_turbulence = {version = "0.4.1", default-features = false}
crystalorb = {version = "0.3.0", path="../../"}
serde = {version = "1.0.118", features = ["derive"]}
turbulence = "0.3"

[dev-dependencies]
bevy = {version = "0.6", default-features = false}
crystalorb-demo = {path = "../../examples/demo"}
