[package]
name = "demo"
version = "0.1.0"
authors = ["Ernest Wong <sudo@ernestwong.nz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.73"
js-sys = "0.3.50"
crystalorb = {version = "0.1.0", path = "../../"}
crystalorb-mock-network = {version = "0.1.0", path = "../../crates/crystalorb-mock-network"}
rapier2d = {version = "0.8.0", features = ["serde-serialize", "wasm-bindgen"]}
serde = {version = "1.0.118", features = ["derive"]}
tracing-wasm = "0.2.0"
console_error_panic_hook = "0.1.6"
tracing = "0.1.22"
