[package]
name = "crystalorb-demo"
version = "0.2.1"
authors = ["Ernest Wong <sudo@ernestwong.nz>"]
categories = ["games", "simulation"]
description = "Visual and interactive demo for CrystalOrb using the Rapier physics engine"
edition = "2018"
keywords = ["netcode"]
license = "Apache-2.0"
readme = "README.markdown"
repository = "https://github.com/ErnWong/crystalorb"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "~0.2"
js-sys = "~0.3"
crystalorb = {version = "0.2.1", path = "../../"}
crystalorb-mock-network = {version = "0.2.1", path = "../../crates/crystalorb-mock-network"}
rapier2d = {version = "0.9.1", features = ["serde-serialize", "wasm-bindgen"]}
serde = {version = "1.0.118", features = ["derive"]}
tracing-wasm = "0.2.0"
console_error_panic_hook = "0.1.6"
tracing = "0.1.22"

# Temporary fix for:
# Fatal: error in validating input
# during build.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
